--- a/src/oscar_accounts/templates/accounts/dashboard/account_freeze.html
+++ b/src/oscar_accounts/templates/accounts/dashboard/account_freeze.html
@@ -7,18 +7,14 @@
 {% endblock %}
 
 {% block breadcrumbs %}
-<ul class="breadcrumb">
-    <li>
-		<a href="{% url 'dashboard:index' %}">{% trans "Dashboard" %}</a>
-    </li>
-    <li>
-		<a href="{% url 'accounts_dashboard:accounts-list' %}">{% trans "Accounts" %}</a>
-    </li>
-    <li>
-        <a href="{% url 'accounts_dashboard:accounts-detail' account.id %}">{{ account }}</a>
-    </li>
-	<li class="active">{% trans "Freeze" %}</li>
-</ul>
+<nav aria-label="breadcrumb">
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a href="{% url 'dashboard:index' %}">{% trans "Dashboard" %}</a></li>
+        <li class="breadcrumb-item"><a href="{% url 'accounts_dashboard:accounts-list' %}">{% trans "Accounts" %}</a></li>
+        <li class="breadcrumb-item"><a href="{% url 'accounts_dashboard:accounts-detail' account.id %}">{{ account }}</a></li>
+        <li class="breadcrumb-item active" aria-current="page">{% trans "Freeze" %}</li>
+    </ol>
+</nav>
 {% endblock %}
 
 {% block headertext %}{% trans "Freeze account?" %}{% endblock %}
@@ -29,7 +25,7 @@
     <form action="." method="post">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit" class="btn btn-large btn-danger">{% trans "Freeze" %}</button>
+        <button type="submit" class="btn btn-lg btn-danger">{% trans "Freeze" %}</button>
         {% trans "or" %} <a href="{% url 'accounts_dashboard:accounts-list' %}">{% trans "cancel" %}</a>.
     </form>
 {% endblock dashboard_content %}
