--- a/src/oscar_accounts/templates/accounts/dashboard/account_thaw.html
+++ b/src/oscar_accounts/templates/accounts/dashboard/account_thaw.html
@@ -7,15 +7,14 @@
 {% endblock %}
 
 {% block breadcrumbs %}
-<ul class="breadcrumb">
-    <li>
-		<a href="{% url 'dashboard:index' %}">{% trans "Dashboard" %}</a>
-    </li>
-    <li>
-		<a href="{% url 'accounts_dashboard:accounts-list' %}">{% trans "Accounts" %}</a>
-    </li>
-	<li class="active">{% trans "Thaw account" %} #{{ account.id }}</li>
-</ul>
+<nav aria-label="breadcrumb">
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a href="{% url 'dashboard:index' %}">{% trans "Dashboard" %}</a></li>
+        <li class="breadcrumb-item"><a href="{% url 'accounts_dashboard:accounts-list' %}">{% trans "Accounts" %}</a></li>
+        <li class="breadcrumb-item"><a href="{% url 'accounts_dashboard:accounts-detail' account.id %}">{{ account }}</a></li>
+        <li class="breadcrumb-item active" aria-current="page">{% trans "Thaw account" %} #{{ account.id }}</li>
+    </ol>
+</nav>
 {% endblock %}
 
 {% block headertext %}{% trans "Thaw account?" %}{% endblock %}
@@ -25,6 +24,6 @@
     <form action="." method="post">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit" class="btn btn-large btn-success">{% trans "Thaw" %}</button>
+        <button type="submit" class="btn btn-lg btn-success">{% trans "Thaw" %}</button>
     </form>
 {% endblock dashboard_content %}
