--- a/src/oscar_accounts/templates/accounts/dashboard/reports/deferred_income.html
+++ b/src/oscar_accounts/templates/accounts/dashboard/reports/deferred_income.html
@@ -7,34 +7,36 @@
 {% endblock %}
 
 {% block breadcrumbs %}
-<ul class="breadcrumb">
-    <li>
-		<a href="{% url 'dashboard:index' %}">{% trans "Dashboard" %}</a>
-    </li>
-    <li>
-		<a href="{% url 'accounts_dashboard:accounts-list' %}">{% trans "Accounts" %}</a>
-    </li>
-	<li class="active">{{ title }}</li>
-</ul>
+<nav aria-label="breadcrumb">
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a href="{% url 'dashboard:index' %}">{% trans "Dashboard" %}</a></li>
+        <li class="breadcrumb-item"><a href="{% url 'accounts_dashboard:accounts-list' %}">{% trans "Accounts" %}</a></li>
+        <li class="breadcrumb-item active" aria-current="page">{{ title }}</li>
+    </ol>
+</nav>
 {% endblock %}
 
 {% block headertext %}{{ title }}{% endblock %}
 
 {% block dashboard_content %}
+<div class="table-header">
+    <h3><i class="fas fa-search"></i> {% trans "Search" %}</h3>
+</div>
 
-<div class="panel panel-default">
-    <div class="panel-heading">{% trans "Search" %}</div>
-    <div class="panel-body">
-        <form class="form-inline" action="." method="get">
-            {% include 'oscar/dashboard/partials/form_fields_inline.html' with form=form %}
-            <button type="submit" class="btn btn-primary" data-loading-text="{% trans 'Fetching...' %}">{% trans "Fetch report" %}</button>
-        </form>
-    </div>
+<div class="card card-body">
+    <form method="get" class="form-inline">
+        {% include "oscar/dashboard/partials/form_fields_inline.html" with form=form %}
+        <button type="submit" class="btn btn-primary mr-2">
+            {% trans "Fetch report" %}
+        </button>
+    </form>
 </div>
 
 {% if rows %}
-<h2>{% trans "Position at" %} {{ report_date }}</h2>
-<table class="table">
+<div class="table-header">
+    <h2>{% trans "Position at" %} {{ report_date }}</h2>
+</div>
+<table class="table table-striped table-bordered table-hover">
 	<thead>
 		<tr>
 			<th>{% trans "Account type" %}</th>
@@ -87,7 +89,6 @@
 			<th>{{ totals.num_accounts }}</th>
 		</tr>
 	</tbody>
-
 </table>
 {% endif %}
 
