--- a/src/oscar_accounts/templates/accounts/dashboard/transfer_detail.html
+++ b/src/oscar_accounts/templates/accounts/dashboard/transfer_detail.html
@@ -7,65 +7,57 @@
 {% endblock %}
 
 {% block breadcrumbs %}
-<ul class="breadcrumb">
-    <li>
-		<a href="{% url 'dashboard:index' %}">{% trans "Dashboard" %}</a>
-    </li>
-    <li>
-		<a href="{% url 'accounts_dashboard:accounts-list' %}">{% trans "Accounts" %}</a>
-    </li>
-    <li>
-		<a href="{% url 'accounts_dashboard:transfers-list' %}">{% trans "Transfers" %}</a>
-    </li>
-	<li class="active">{{ transfer.reference }}</li>
-</ul>
+<nav aria-label="breadcrumb">
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a href="{% url 'dashboard:index' %}">{% trans "Dashboard" %}</a></li>
+        <li class="breadcrumb-item"><a href="{% url 'accounts_dashboard:accounts-list' %}">{% trans "Accounts" %}</a></li>
+        <li class="breadcrumb-item"><a href="{% url 'accounts_dashboard:transfers-list' %}">{% trans "Transfers" %}</a></li>
+        <li class="breadcrumb-item active" aria-current="page">{{ transfer.reference }}</li>
+    </ol>
+</nav>
 {% endblock %}
 
 {% block headertext %}Transfer {{ transfer.reference }}{% endblock %}
 
 {% block dashboard_content %}
-
-
-<div class="panel panel-default">
-    <div class="panel-heading">{% trans "Transfers" %}</div>
-    <div>
-        <table id="" class="table">
-            <tbody>
-                <tr>
-                    <th>{% trans "Reference" %}</th>
-                    <td>{{ transfer.reference }}</td>
-                </tr>
-                <tr>
-                    <th>{% trans "Source" %}</th>
-                    <td><a href="{% url 'accounts_dashboard:accounts-detail' transfer.source.id %}">{{ transfer.source }}</a></td>
-                </tr>
-                <tr>
-                    <th>{% trans "Destination" %}</th>
-                    <td><a href="{% url 'accounts_dashboard:accounts-detail' transfer.destination.id %}">{{ transfer.destination }}</a></td>
-                </tr>
-                <tr>
-                    <th>{% trans "Amount" %}</th>
-                    <td>{{ transfer.amount|currency }}</td>
-                </tr>
-                <tr>
-                    <th>{% trans "Merchant reference" %}</th>
-                    <td>{{ transfer.merchant_reference|default:"-" }}</td>
-                </tr>
-                <tr>
-                    <th>{% trans "Description" %}</th>
-                    <td>{{ transfer.description|default:"-" }}</td>
-                </tr>
-                <tr>
-                    <th>{% trans "Authorised by" %}</th>
-                    <td>{{ transfer.user }}</td>
-                </tr>
-                <tr>
-                    <th>{% trans "Date" %}</th>
-                    <td>{{ transfer.date_created }}</td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
+<div class="table-header">
+    <h3>{% trans "Transfers" %}</h3>
 </div>
 
+<table class="table table-striped table-bordered table-hover">
+    <tbody>
+        <tr>
+            <th>{% trans "Reference" %}</th>
+            <td>{{ transfer.reference }}</td>
+        </tr>
+        <tr>
+            <th>{% trans "Source" %}</th>
+            <td><a href="{% url 'accounts_dashboard:accounts-detail' transfer.source.id %}">{{ transfer.source }}</a></td>
+        </tr>
+        <tr>
+            <th>{% trans "Destination" %}</th>
+            <td><a href="{% url 'accounts_dashboard:accounts-detail' transfer.destination.id %}">{{ transfer.destination }}</a></td>
+        </tr>
+        <tr>
+            <th>{% trans "Amount" %}</th>
+            <td>{{ transfer.amount|currency }}</td>
+        </tr>
+        <tr>
+            <th>{% trans "Merchant reference" %}</th>
+            <td>{{ transfer.merchant_reference|default:"-" }}</td>
+        </tr>
+        <tr>
+            <th>{% trans "Description" %}</th>
+            <td>{{ transfer.description|default:"-" }}</td>
+        </tr>
+        <tr>
+            <th>{% trans "Authorised by" %}</th>
+            <td>{{ transfer.user }}</td>
+        </tr>
+        <tr>
+            <th>{% trans "Date" %}</th>
+            <td>{{ transfer.date_created }}</td>
+        </tr>
+    </tbody>
+</table>
 {% endblock dashboard_content %}
